# Rift-Fitness-Tracker

./: .gitignore  Learning.py  README.md  SETUP.md  config.py  database.py  database_schema.md  debug_log.txt  kda_tracker.py  main.py  overlay.py  pyproject.toml  requirements.txt  rift_fitness_tracker.spec  riot.txt  riot_api.py  tracker_worker.py
.github/workflows/: release.yml
src/rift_fitness_tracker/: config.py  main.py  overlay.py  tracker_worker.py
