[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rift_fitness_tracker"
version = "0.1.1"
description = "Rift Fitness Tracker"
readme = "README.md"
requires-python = ">=3.13"
license = { file = "LICENSE" }
authors = [
    { name = "JustG", email = "gdoescode@gmail.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

# External dependencies required when someone installs your package
dependencies = [
    "requests>=2.34.0",
    "python-dotenv>=1.2.0",
]

[project.urls]
"Homepage" = "https://github.com/GDoesCode/Rift-Fitness-Tracker"
"Bug Tracker" = "https://github.com/GDoesCode/Rift-Fitness-Tracker/issues"